fix spacing nav items

--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@ nav {
 }
 
 nav a {
-  margin: 0 1rem;
+  margin: 0 1rem 0 0;
   text-decoration: none;
   color: #fff;
   font-weight: bold;
